2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Print a configuration summary at the end of the
	configure run

2012-02-11  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7718: Merge global data of avrftdi in a private data structure
	* avrftdi.[ch]: moved global data into private data structure, moved
	private defines from header file into source file

2012-02-06  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7720 Bug in EEPROM write
	* avrftdi.c: fixed wrong buffer address initialization in paged_write
	* fileio.c: added #include <stdint.h>

2012-02-05  Rene Liebscher <R.Liebscher@gmx.de>

	bug #30559 Ft232 bit-bang support
	* ft245r.c: cancel reader thread before exiting program

2012-02-04  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7717 avrftdi_flash_write is broken
	* avrftdi.c: fixed wrong buffer address initialization in paged_write
	bug #35296 Extraneous newlines in output.
	* main.c: fixed output of newlines at 100% progress

2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7715 FT4232H support
	* avrdude.conf.in: added programmer 4232h

2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the programmers lists)
	* doc/avrdude.texi: Add include of generated table of programmers
	* doc/Makefile.am: Add generating of table of programmers in programmers.texi

2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	bug #34768 Proposition: Change the name of the AVR32 devices
	* avrdude.conf.in: renamed ucr2 to uc3a0512
	* avrpart.c: added cast to avoid compiler warning

2012-02-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (fileio_elf): Fix a copy'n-paste-o.

2012-02-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* par.c (par_desc): Move to end of file, outside the #if
	HAVE_PARPORT

2012-02-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement ELF file reading (finally).  Requires libelf(3) to be
	present on the host system.